--- a/mirangolib.css
+++ b/mirangolib.css
@@ -2,7 +2,7 @@
     |==============================================================================|
     |                          M I R A N G O   L I B R A R Y                       |
     |______________________________________________________________________________|
-    | Versão: Beta 1.2                                                             |
+    | Versão: 1.5                                                                  |
     |______________________________________________________________________________|
 */
 
@@ -97,6 +97,7 @@
     justify-content: center;
     margin: 4rem 0;
 }
+/* ^ */.cl1 {width: 90%; /**/ align-items: center; /**/ justify-content: center; /**/ text-align: center;}
 /* ^ */.cl2 {width: 50%; /**/ align-items: center; /**/ justify-content: center; /**/ text-align: center;}
 /* ^ */.cl3 {width: 33%; /**/ align-items: center; /**/ justify-content: center; /**/ text-align: center;}
 /* ^ */.cl4 {width: 25%; /**/ align-items: center; /**/ justify-content: center; /**/ text-align: center;}
@@ -140,15 +141,63 @@
 .f-prg     {background-color: var(--perigo);}
 .f-attc    {background-color: var(--atencao);}
 .f-ok      {background-color: var(--okay);}
+
 .f-escur   {background-color: var(--escuridao); /**/ color: aliceblue;}
+    .f-escur div         {background-color: var(--escuridao); /**/ color: aliceblue;}
+    .f-escur div div     {background-color: var(--escuridao); /**/ color: aliceblue;}
+    .f-escur div div div {background-color: var(--escuridao); /**/ color: aliceblue;}
+/*LINKS NAVBAR-I */    .f-escur div ul li a {background-color: var(--escuridao); /**/ color: aliceblue;}
+
+/*INPUT NAVBAR-II*/    .f-escur div div input {color: aliceblue; border-bottom: solid 0.13rem aliceblue;}
+                       .f-escur div div input:focus {border: solid 0.125rem aliceblue;}
+      
+/*LINK FORMULARIO*/    .f-escur div p a {color: rgb(155, 155, 155);}
+
 .f-mnm     {background-color: var(--minimalista);}
 .f-ff      {background-color: var(--fofo);}
 .f-ntz     {background-color: var(--natureza);}
 .f-urb     {background-color: var(--urbano);}
+
 .f-mdvl    {background-color: var(--medieval);  /**/ color: antiquewhite;}
+    .f-mdvl div         {background-color: var(--medieval); /**/ color: antiquewhite;}
+    .f-mdvl div div     {background-color: var(--medieval); /**/ color: antiquewhite;}
+    .f-mdvl div div div {background-color: var(--medieval); /**/ color: antiquewhite;}
+/*LINKS NAVBAR-I */    .f-mdvl div ul li a {background-color: var(--medieval);  /**/ color: antiquewhite;}
+
+/*INPUT NAVBAR-II*/    .f-mdvl div div input {color: antiquewhite; border-bottom: solid 0.13rem antiquewhite;}
+                       .f-mdvl div div input:focus {border: solid 0.125rem antiquewhite;}
+
 .f-lua     {background-color: var(--lua);}
+
 .f-uni     {background-color: var(--universo);  /**/ color: aliceblue;}
+    .f-uni div          {background-color: var(--universo); /**/ color: aliceblue;}
+    .f-uni div div      {background-color: var(--universo); /**/ color: aliceblue;}
+    .f-uni div div div  {background-color: var(--universo); /**/ color: aliceblue;}
+/*LINKS NAVBAR-I */    .f-uni div ul li a {background-color: var(--universo);  /**/ color: aliceblue;}
+
+/*INPUT NAVBAR-II*/    .f-uni div div input {color: aliceblue; border-bottom: solid 0.13rem aliceblue;}
+                       .f-uni div div input:focus {border: solid 0.125rem aliceblue;}
+
+/*LINK FORMULARIO*/    .f-uni div p a {color: rgb(155, 155, 155);}
+
 .f-neb     {background-color: var(--nebula);    /**/ color: aliceblue;}
+    .f-neb div {background-color: var(--nebula);    /**/ color: aliceblue;}
+    .f-neb div div {background-color: var(--nebula);    /**/ color: aliceblue;}
+    .f-neb div div div {background-color: var(--nebula);    /**/ color: aliceblue;}
+/*LINKS NAVBAR-I */    .f-neb div ul li a {background-color: var(--nebula);    /**/ color: aliceblue;}
+
+/*INPUT NAVBAR-II*/    .f-neb div div input {color: aliceblue; border-bottom: solid 0.13rem aliceblue;}
+                       .f-neb div div input:focus {border: solid 0.125rem aliceblue;}
+
+/*LINK FORMULARIO*/    .f-neb div p a {color: rgb(200, 200, 200);}
+
+
+.f-pdo div ul li a:hover , .f-scss div ul li a:hover , .f-prg div ul li a:hover , .f-attc div ul li a:hover ,
+.f-ok  div ul li a:hover , .f-mnm  div ul li a:hover , .f-ff  div ul li a:hover , .f-ntz  div ul li a:hover , 
+.f-urb div ul li a:hover , .f-lua  div ul li a:hover   {background-color: rgba(0, 0, 0, 0.2);}
+
+.f-escur div ul li a:hover , .f-mdvl div ul li a:hover , 
+.f-uni   div ul li a:hover , .f-neb  div ul li a:hover {background-color: rgba(255, 255, 255, 0.2);}
 
 /*TAMANHOS (PARA BOTÕES)*/
 .tm-b-mn   {padding: 0.3rem var(--mini);}
@@ -178,22 +227,22 @@ h1 , h2 , h3 , h4 , h5 , h6 {margin: 0;}
 /* => Títulos | Títulos | Tiltes */
 h1 {font-size: 2.6rem;} /* 42px */
 h2 {font-size: 2.3rem;} /* 36px */
-h3 {font-size: 2rem;}   /* 32px */
+h3 {font-size:   2rem;}   /* 32px */
 
 /* => Subtítulos | Subtítulos | Subtitles */
 h4 {font-size: 1.5rem;} /* 27px */
 h5 {font-size: 1.3rem;} /* 22px */
-h6 {font-size: 1rem;}   /* 16px */
+h6 {font-size:   1rem;}   /* 16px */
 
-p {font-size: 1.2rem;}  /* 19px */
+p  {font-size: 1.2rem;}  /* 19px */
 
-input {border-radius: 0.3rem; /**/  border: 0.15rem solid rgba(0, 0, 0, 0.2);}
-input:focus {border: none; /**/ outline: 0.15rem solid rgba(0, 0, 0, 0.4);}
+input       {border-radius: 0.3rem; /**/  border: 0.15rem solid rgba(0, 0, 0, 0.2);}
+input:focus {outline: 0.15rem solid rgba(0, 0, 0, 0.4);}
 
 @media screen and (max-width: 75.99rem) /*1199px*/
 {
     h1 {font-size: 2.3rem;}
-    h2 {font-size: 2rem;}
+    h2 {font-size:   2rem;}
     h3 {font-size: 1.7rem;}
 }
 @media screen and (max-width: 36.87rem) /*590px*/
@@ -212,47 +261,101 @@ input:focus {border: none; /**/ outline: 0.15rem solid rgba(0, 0, 0, 0.4);}
 /* =-=-=-=-= MODELOS CRIADOS | MODELOS CREADOS | MODELS =-=-=-=-= */
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
 
-/* NAVBAR - MODELO 1
+/* NAVBAR - MODELO 1 */
 
-.nav-pdo
+.nav-I
 {
    width: 100%;
    height: var(--tmNAV);
+   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
-.nav-pdo-int 
+.nav-I-int
+{
+    padding: 0 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    max-height: inherit;
+    
+}
+.nav-I-logo img {width: calc(var(--tmNAV) - 0.5rem);}
+.nav-I-int ul 
 {
     display: flex;
     flex-direction: row;
-}
-.nav-pdo-int .nav-logo
-{
-    display: flex;
     align-items: center;
-    height: var(--tmNAV);
-    overflow: hidden;
-}
-.nav-pdo-int .nav-logo img 
-{
-    width: calc(var(--tmNAV) - 1%);
-}
-.nav-pdo-int ul
-{
+    list-style: none;
+    height: inherit;
     margin: 0;
-    display: flex;
-    height: var(--tmNAV);
-    align-items: center;
-    justify-content: center;
+    padding: 0;
 }
-.nav-pdo-int ul li
+.nav-I-int ul li {padding: 0 1rem; height: inherit;}
+.nav-I-int ul li .nav-I-item
 {
     height: var(--tmNAV);
-    list-style-type: none;
-    margin:  0 2%;
-    cursor: pointer;
-    
+    border-left: solid 1px rgba(0, 0, 0, 0.05);
+    border-right: solid 1px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    padding: 0 1.5rem;
 }
-.nav-pdo-int ul li:hover {background-color: rgba(0, 0, 0, 0.1); transition: 0.5s ease-in-out;}
-*/
+.nav-I-int ul li .nav-I-item:hover
+{
+    border-radius: 0 0 20% 20%;
+    font-weight: 700;
+    transition: 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 39.37rem) /*590px*/
+{
+    .nav-I-int ul li .nav-I-item
+    {
+        padding: 0 0.5rem;
+    }
+}
+
+/* NAVBAR - MODELO 2 */
+.div-nav-II {transform: translateY(-65px);}
+.nav-II-topo
+{
+    background-attachment: scroll;
+    background-size: cover;
+    width: 100%;
+    height: calc(var(--tmNAV) * 2.3);
+}
+.nav-II-logo img {width: calc(var(--tmNAV) * 2.1);}
+.nav-II-busca input 
+{
+    width: 11.85rem;
+    background-color: inherit;
+    outline: none;
+    border: none;
+    border-radius: 0;
+    border-bottom: solid 0.13rem #000;
+    padding: 0.8rem 0.5rem;
+}
+.nav-II-busca input:focus 
+{
+    border-radius: 0 1rem;
+    transition: 0.5s;
+    border: solid 0.125rem #000;
+    font-size: 1rem;
+    font-weight: 700;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.nav-II
+{
+    
+    position: sticky;
+   margin: 0;
+   padding: 0; 
+   width: 100%;
+   height: var(--tmNAV);
+   border-top: solid 1px rgba(0, 0, 0, 0.1);
+   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
 
 
 /* BOTÃO | BOTÓN | BUTTON */
@@ -260,14 +363,14 @@ input:focus {border: none; /**/ outline: 0.15rem solid rgba(0, 0, 0, 0.4);}
 {
     text-align: center;
     border-radius: 0.3rem;
-    border: 0.12rem solid rgba(0, 0, 0, 0.1);
+    border: 0.12rem solid rgba(0, 0, 0, 0.3);
     cursor: pointer;
     opacity: 0.8;
 }
 /* ^ */.bto-I:hover
     {
         padding: 0.5rem calc(inherit + 3%);
-        border: 0.12rem solid rgba(0, 0, 0, 0.0);
+        border: 0.12rem solid rgba(0, 0, 0, 0.1);
         transition: 0.3s ease-in-out;
         opacity: 1;
     }
@@ -422,3 +525,30 @@ input:focus {border: none; /**/ outline: 0.15rem solid rgba(0, 0, 0, 0.4);}
     position: relative;
     float: right;
 }
+
+@media screen and (max-width: 20rem) /*320px*/
+{
+    .mdl-int {width: 20rem;}
+}
+
+
+/* FORMS */
+
+.form-I {width: 30rem; /**/ margin: 0 auto;}
+.form-I form   
+{
+    padding: 1rem 1.3rem; 
+    border-radius: 0.8rem; 
+    box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.3);
+}
+.form-I-inputs {display: flex; /**/ flex-direction: column; padding: 0 2rem;}
+.form-I-inputs label {margin: 0.1rem 1.8rem;}
+.form-I form h3 {margin: 0.8rem 1.8rem;}
+.form-I-inputs input
+{
+    margin: 0.8rem 1.8rem;
+    padding: 0.3rem 0.5rem;
+}
+.form-I-links  {display: grid; /**/ place-items: center;}
+.form-I-links p a       {opacity: 0.7;}
+.form-I-links p a:hover {opacity:   1;}
